# text_forger

./: CMakeLists.txt  README.md  builder.h  color.h  forger.h  literal.h  main.cpp  rejecter.h  text_forger.cpp  text_forger.h
